# GUI-tac-tac-toe

./: CMakeLists.txt  LICENSE  README.md  logic.hpp  main.cpp
Linux executable/: TIC
src/: CMakeLists.txt  RenderObjects.hpp  States.hpp  logic.hpp  main.cpp
